--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "trucks",
   "version": "1.0.0",
   "description": "Server API for trucks information",
-  "main": "app.js",
+  "main": "app.jsx",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
